feat(method-show): define method show in admonTopicController
